Add service functionality

--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Home/Index.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Home/Index.cshtml
@@ -1,9 +1,16 @@
-﻿@using MyRecipes.Common
+﻿@model MyRecipes.Web.ViewModels.Home.IndexViewModel
+@using MyRecipes.Common
 @{
     this.ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <p>We have:</p>
+    <ul class="list-group"></ul>
+    <li class="list-group-item bg-white">Recipes: @Model.RecipesCount</li>
+    <li class="list-group-item bg-white">Categories: @Model.CategoriesCount</li>
+    <li class="list-group-item bg-white">Images: @Model.ImagesCount</li>
+    <li class="list-group-item bg-white">Ingredients: @Model.IngredientsCount</li>
 </div>
