--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Chat/Chat.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Chat/Chat.cshtml
@@ -4,7 +4,7 @@
 
 <h1>@this.ViewBag.Title</h1>
 
-<div class="container">
+@*<div class="container">
     <div id="message-holder" class="mt-3 d-flex justify-content-start">
         <h4>Message</h4>
         <input class="w-75 ml-4 pl-3" type="text" id="messageInput" placeholder="Message..." />
@@ -12,6 +12,62 @@
     </div>
     <hr style="height: 5px;" class="bg-dark" />
     <div id="messagesList" style="font-size: 28px;">
+    </div>
+</div>*@
+
+<hr />
+
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-5">
+            <div class="panel panel-primary">
+                <div class="panel-heading" id="accordion">
+                    <span class="glyphicon glyphicon-comment"></span> Chat
+                    <div class="btn-group pull-right">
+                        <a type="button" class="btn btn-default btn-xs" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            <span class="glyphicon glyphicon-chevron-down"></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="panel-collapse collapse" id="collapseOne">
+                    <div class="panel-body">
+                        <ul class="chat">
+                            <li class="left clearfix">
+                                
+                               <div class="chat-body clearfix">
+                                    <div class="header">
+                                        <strong class="primary-font"></strong> <small class="pull-right text-muted">
+                                 <span class="glyphicon glyphicon-time"></span>  @DateTime.Now
+                                        </small>
+                                    </div>
+                                    <p id="messagesList">
+                                       
+                                    </p>
+                                </div>
+                            </li>
+                                                     
+                            
+                        </ul>
+                    </div>
+                    <div id="messagesList" class="panel-footer">
+                        <div id="message-holder" class="input-group">
+                            <input id="messageInput" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                            <span class="input-group-btn">
+                                <button id="sendButton" class="btn btn-warning btn-sm">
+                                    Send
+                                </button>
+                            </span>
+                        </div>
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
