Formating Price value

--- a/ASP.NET Core/OnlineEShop/OnlineEShop/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core/OnlineEShop/OnlineEShop/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         </li>
                         <partial name="_LoginPartial" />
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex offset-3">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
@@ -58,7 +58,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - OnlineEShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.UtcNow.Year - OnlineEShop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
