--- a/ASP.NET Core/OnlineEShop/OnlineEShop/Views/Products/AllByCategory.cshtml
+++ b/ASP.NET Core/OnlineEShop/OnlineEShop/Views/Products/AllByCategory.cshtml
@@ -10,7 +10,7 @@
             <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">@item.Name</h5>
-                <h7>@item.Price лв</h7>
+                <h7>@item.Price.ToString("C2")</h7>
                 <p class="card-text">@item.Description</p>
                 <a asp-controller="Products" asp-action="AllById" asp-route-id="@item.Id" class="btn btn-outline-dark">Виж повече</a>
             </div>
